Yaml/trips-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  labels:
    deploy: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - image: "registrybyd5320.azurecr.io/tripinsights/trips:1.0"
        imagePullPolicy: Always
        name: trips
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
