Yaml/poi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: https
    port: 443
    targetPort: 443
