Yaml/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: api
  labels:
    app: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user-container
        image : "registrybyd5320.azurecr.io/tripinsights/user:1.0"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvtrips"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: api
  labels:
    app: user
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: user
